--- a/portfolio_index.html
+++ b/portfolio_index.html
@@ -68,7 +68,9 @@
             </div>
           </div>
           <div class="col-lg-5 text-center">
-            <img src="https://github.com/FairoozRubayet/Personal_Portfolio_Labwork8/blob/main/assets/img/fairooz-profile.jpg" alt="Portrait of A J M Fairooz Rubayet" class="img-fluid rounded-circle">
+            <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/fairooz-profile.jpg" 
+                 alt="Portrait of A J M Fairooz Rubayet" 
+                 class="img-fluid rounded-circle">
           </div>
         </div>
       </div>
@@ -101,7 +103,9 @@
             </div>
           </div>
           <div class="col-lg-5 text-center">
-            <img src="assets/img/profile/fairooz-square.jpg" class="img-fluid rounded-4" alt="A J M Fairooz Rubayet professional portrait">
+            <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/fairooz-square.jpg" 
+                 class="img-fluid rounded-4" 
+                 alt="A J M Fairooz Rubayet professional portrait">
           </div>
         </div>
       </div>
@@ -163,7 +167,9 @@
         <div class="row gy-4">
           <div class="col-md-4">
             <div class="portfolio-card">
-              <img src="assets/img/portfolio/surfshark-testing.jpg" class="img-fluid rounded-3" alt="Surfshark VPN QA Testing">
+              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/surfshark-testing.jpg" 
+                   class="img-fluid rounded-3" 
+                   alt="Surfshark VPN QA Testing">
               <h4>Surfshark VPN QA Testing</h4>
               <p>Tested encryption protocols, multi-hop features, and DNS leak prevention across platforms.</p>
             </div>
@@ -171,7 +177,9 @@
 
           <div class="col-md-4">
             <div class="portfolio-card">
-              <img src="assets/img/portfolio/zendesk-automation.jpg" class="img-fluid rounded-3" alt="Zendesk Automation Workflow">
+              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/zendesk-automation.jpg" 
+                   class="img-fluid rounded-3" 
+                   alt="Zendesk Automation Workflow">
               <h4>Zendesk + Slack Automation</h4>
               <p>Created workflow automations to streamline customer ticket processing and notifications.</p>
             </div>
@@ -179,7 +187,9 @@
 
           <div class="col-md-4">
             <div class="portfolio-card">
-              <img src="assets/img/portfolio/incogni-privacy.jpg" class="img-fluid rounded-3" alt="Incogni Privacy Project">
+              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/incogni-privacy.jpg" 
+                   class="img-fluid rounded-3" 
+                   alt="Incogni Privacy Project">
               <h4>Incogni Data Privacy Ops</h4>
               <p>Automated DSAR handling and GDPR/CCPA compliance for US and EU clients.</p>
             </div>
@@ -199,7 +209,7 @@
         <div class="row gy-4">
           <div class="col-lg-4">
             <video width="100%" controls>
-              <source src="assets/media/demo.mp4" type="video/mp4">
+              <source src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/media/demo.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           </div>
