--- a/portfolio_index.html
+++ b/portfolio_index.html
@@ -68,9 +68,7 @@
             </div>
           </div>
           <div class="col-lg-5 text-center">
-            <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/fairooz-profile.jpg" 
-                 alt="Portrait of A J M Fairooz Rubayet" 
-                 class="img-fluid rounded-circle">
+            <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/fairooz-profile.jpg" alt="Portrait of A J M Fairooz Rubayet" class="img-fluid rounded-4">
           </div>
         </div>
       </div>
@@ -103,9 +101,7 @@
             </div>
           </div>
           <div class="col-lg-5 text-center">
-            <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/fairooz-square.jpg" 
-                 class="img-fluid rounded-4" 
-                 alt="A J M Fairooz Rubayet professional portrait">
+            <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/fairooz-square.jpg" class="img-fluid rounded-4" alt="A J M Fairooz Rubayet professional portrait">
           </div>
         </div>
       </div>
@@ -167,9 +163,7 @@
         <div class="row gy-4">
           <div class="col-md-4">
             <div class="portfolio-card">
-              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/surfshark-testing.jpg" 
-                   class="img-fluid rounded-3" 
-                   alt="Surfshark VPN QA Testing">
+              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/surfshark-testing.jpg" class="img-fluid rounded-3" alt="Surfshark VPN QA Testing">
               <h4>Surfshark VPN QA Testing</h4>
               <p>Tested encryption protocols, multi-hop features, and DNS leak prevention across platforms.</p>
             </div>
@@ -177,9 +171,7 @@
 
           <div class="col-md-4">
             <div class="portfolio-card">
-              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/zendesk-automation.jpg" 
-                   class="img-fluid rounded-3" 
-                   alt="Zendesk Automation Workflow">
+              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/zendesk-automation.jpg" class="img-fluid rounded-3" alt="Zendesk Automation Workflow">
               <h4>Zendesk + Slack Automation</h4>
               <p>Created workflow automations to streamline customer ticket processing and notifications.</p>
             </div>
@@ -187,9 +179,7 @@
 
           <div class="col-md-4">
             <div class="portfolio-card">
-              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/incogni-privacy.jpg" 
-                   class="img-fluid rounded-3" 
-                   alt="Incogni Privacy Project">
+              <img src="https://raw.githubusercontent.com/FairoozRubayet/personalPortfolio/main/assets/img/incogni-privacy.jpg" class="img-fluid rounded-3" alt="Incogni Privacy Project">
               <h4>Incogni Data Privacy Ops</h4>
               <p>Automated DSAR handling and GDPR/CCPA compliance for US and EU clients.</p>
             </div>
